# automation-app

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cli.py  crontab-examples.txt  dashboard.html  docker-compose.yml  docker-entrypoint.sh  example-config.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py
app/api/: __init__.py  deps.py  main.py
app/core/: __init__.py  config.py  database.py  logging.py
app/models/: __init__.py  execution_log.py  schedule.py  task.py  user.py  webhook.py
app/schemas/: __init__.py
app/services/: __init__.py  auth.py  command_validator.py  executor.py  scheduler.py  webhook.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  USER_GUIDE.md
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_command_validator.py  test_executor.py  test_models.py
